# Core

./: CMakeLists.txt  LICENSE  README.md  Sources.cmake
scripts/: .config.luau  test.luau
src/Compile/: main.cpp
src/Engine/: CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h  FileUtils.cpp  FileUtils.h  ILuauModule.h  Package.cpp  Require.cpp  Require.h  RequireResolver.cpp  RequireResolver.h
src/LCompile/: CMakeLists.txt  main.cpp
src/LDebug/: CMakeLists.txt  main.cpp
src/LRemoteDebug/: CMakeLists.txt
src/LRun/: CMakeLists.txt  getExecutablePath.h  main.cpp
src/RunPackage/: CMakeLists.txt  main.cpp
src/RunScript/: main.cpp
